style.sass
$animal_color: rgb(243, 203, 58)
$resource_color: rgb(233, 67, 130)
$player_color: rgb(69, 232, 142)
$tile_color: rgb(152, 83, 163)
$item_color: rgb(243, 101, 101)

@keyframes pop
    75%
        transform: scale(1.4)
    100%
        transform: scale(1)
@keyframes slide-down
    0%
        opacity: 0
        transform: translateY(-1rem)

    100%
        opacity: 1
        transform: translateY(0rem)

*
    padding: 0
    margin: 0
    box-sizing: border-box

body
    background: #2d5e51
    color: beige
    font-family: Arial, Helvetica, sans-serif

main
    width: 100%
    height: 100vh

.game
    display: block
    width: 100%
    height: 100%

    .map
        filter: url(#goo-filter) drop-shadow(0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.4))
        .tile
            fill: rgb(244, 187, 187)

    .particle
        &.move-center .body
            fill: $resource_color
            stroke: lighten($resource_color, 25)
        &.move-to .body
            fill: $player_color
            stroke: lighten($player_color, 25)
        &.follow-move-to .body
            fill: rgb(137, 238, 223)
            stroke: lighten(rgb(137, 238, 223), 25)
        &.move-closest .body
            fill: $item_color
            stroke: lighten($item_color, 25)
        &.idle .body
            fill: $tile_color
            stroke: lighten($tile_color, 25)
        &.avoid .body
            fill: rgb(90, 100, 152)
            stroke: lighten(rgb(90, 100, 152), 25)

        .body
            stroke-width: 2

        .velocity
            stroke: lighten($player_color, 25)
            stroke-width: 5
            stroke-linecap: round

